# huggr

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  PROGRESS.md  README.md  TRACE_ANALYSIS_7778b667.md  new_ideas.md  plan.md
.agents/skills/huggr-build-agent/: SKILL.md
.agents/skills/huggr-debug-traces/: SKILL.md
.agents/skills/huggr-python/: SKILL.md
.agents/skills/huggr-typescript/: SKILL.md
.agents/skills/hugr-build-agent/: SKILL.md
.agents/skills/hugr-chrome-extension/: SKILL.md
.agents/skills/hugr-debug-traces/: SKILL.md
.agents/skills/hugr-python/: SKILL.md
.agents/skills/hugr-typescript/: SKILL.md
.github/workflows/: build-publish-pypi-hugr-docs.yml  build-publish-wheels.yml  ci.yml  publish-crates.yml  publish-huglet-docs.yml  release.yml
bindings/python/: README.md
bindings/python/tests/: test_agent.py
bindings/typescript/: README.md  agent_driver.js  openai_adapter.js  package.json  tsconfig.json
bindings/typescript/scripts/: build-wasm.sh
bindings/typescript/src/: agent.ts  browser.ts  contract.ts  index.ts  node.ts  openai.ts
bindings/typescript/tests/: agent.test.mjs  mock_openai.mjs
crates/baton-cli/src/: main.rs
crates/baton-core/src/: brain.rs  policy.rs  state.rs
crates/baton-core/tests/: cancellation.rs  concurrent_ops.rs
crates/baton-host/src/: capability.rs  engine.rs  frontend.rs  lib.rs
crates/baton-host/tests/: end_to_end.rs
crates/baton-providers/src/: openai.rs
crates/baton-replay/src/: lib.rs  replay.rs
crates/baton-replay/tests/: replay.rs
crates/huggr-agent/: Cargo.toml
crates/huggr-agent/schemas/: answer.schema.json
crates/huggr-agent/src/: agent.rs  agent_tool.rs  analytics.rs  contract.rs  store.rs
crates/huggr-agent/tests/: blobs.rs  contract.rs  resume_fork.rs
crates/huggr-core/: Cargo.toml
crates/huggr-core/src/: brain.rs  policy.rs
crates/huggr-host/: Cargo.toml
crates/huggr-host/src/: engine.rs  mcp.rs
crates/huggr-host/tests/: end_to_end.rs
crates/huggr-providers/: Cargo.toml
crates/huggr-python/: Cargo.toml
crates/huggr-python/src/: config.rs
crates/huggr-replay/: Cargo.toml
crates/huggr-toolkit/: Cargo.toml  build.rs
crates/huggr-toolkit/reference/: huggr.toml
crates/huggr-toolkit/src/: build.rs  build_python.rs  lib.rs  manifest.rs  (+5 more)
crates/huggr-wasm/: Cargo.toml
crates/hugr-agent/: Cargo.toml
crates/hugr-agent/schemas/: answer.schema.json  ask.schema.json
crates/hugr-agent/src/: agent.rs  agent_tool.rs  answer_schema.rs  blobs.rs  contract.rs  lib.rs  limits.rs  scratch.rs  store.rs
crates/hugr-agent/tests/: agent_as_tool.rs  answer_extra.rs  blobs.rs  concurrent_asks.rs  contract.rs  introspection.rs  limits.rs  resource_groups.rs  resume_fork.rs  scratchpad.rs  store.rs
crates/hugr-cli/: Cargo.toml
crates/hugr-core/: Cargo.toml
crates/hugr-core/src/: brain.rs  command.rs  event.rs  lib.rs  model.rs  policy.rs  primitives.rs  record.rs  state.rs
crates/hugr-core/tests/: cancellation.rs  concurrent_ops.rs  determinism.rs  scripted_session.rs  sub_agents.rs
crates/hugr-core/tests/common/: mod.rs
crates/hugr-docs/: Cargo.toml  README.md  pyproject.toml
crates/hugr-docs-2/: README.md  SYSTEM.md  hugr.toml
crates/hugr-example-plugin/: Cargo.toml
crates/hugr-example-plugin/src/: main.rs
crates/hugr-example-plugin/tests/: e2e.rs
crates/hugr-host/: Cargo.toml
crates/hugr-host/src/: agent.rs  capability.rs  coalesce.rs  engine.rs  framing.rs  frontend.rs  lib.rs  mcp.rs  model.rs  plugins.rs  policy.rs  scheduler.rs  spend.rs
crates/hugr-host/src/capabilities/: blob.rs  fs.rs  http.rs  shell.rs  verify.rs
crates/hugr-host/tests/: end_to_end.rs
crates/hugr-plugin-abi/: Cargo.toml
crates/hugr-providers/: Cargo.toml
crates/hugr-providers/src/: lib.rs  openai.rs
crates/hugr-providers/tests/: retry.rs  streaming.rs
crates/hugr-replay/: Cargo.toml
crates/hugr-toolkit/: Cargo.toml
crates/hugr-toolkit/reference/: hugr.toml
crates/hugr-toolkit/src/: build.rs  build_python.rs  bundle.rs  lib.rs  manifest.rs  mcp_serve.rs  runtime.rs  scaffold.rs  schema_py.rs  surface.rs  traces.rs
crates/hugr-toolkit/src/tools/: fs_read.rs  mod.rs  sqlite_query.rs  web_fetch.rs
crates/hugr-toolkit/tests/: build_cli.rs  build_python.rs  conformance.rs  external_tools.rs  reference_manifest.rs
crates/hugr-wasm/: Cargo.toml  build-extension.sh
docs/: ARCHITECTURE.md  BRANDING.md  DESIGN.md  README.md  ROADMAP.md  ROADMAP_2.md  agents.md  capabilities.md  overview.md  project-structure.md  reference.md  runtime.md  security.md
docs/concepts/: models-and-pricing.md  security.md  streaming.md  tool-security.md
docs/guides/: 01-first-agent-cli.md  02-typed-responses-and-hooks.md  03-first-chrome-extension.md  04-agent-binary-from-python.md  05-agent-entirely-in-python.md  06-agent-entirely-in-typescript.md  07-composition-and-cost.md  08-traces-replay-debugging.md  10-tool-grants-and-jails.md  11-skills.md  12-blobs-scratchpad-memory.md  13-models-tiers-pricing.md  14-limits-and-cron.md  14-limits.md  15-mcp.md  16-runtime-args.md  17-streaming-and-events.md  PLAN.md  README.md  compose-agents.md  package-agent-for-python.md  releases-and-ci.md
docs/reference/: agents.md  capabilities.md  framework-comparison.md  project-layout.md
docs/tutorials/: 01-first-agent-cli.md  02-typed-responses-and-hooks.md  03-first-chrome-extension.md  04-agent-binary-from-python.md  05-agent-entirely-in-python.md  06-agent-entirely-in-typescript.md  07-composition-and-cost.md  08-traces-replay-debugging.md  README.md  docs-qa-dataset-pipeline.md  first-agent.md  python-agent.md  typescript-agent.md
draft/: brain_sketch.rs
examples/chrome-extension/: README.md
examples/hf-librarian/: README.md  pipeline.py
examples/huglet-datasmith/: Cargo.toml
examples/huglet-docs/: Cargo.toml  README.md  SYSTEM.md  huggr.toml
examples/huglet-insights/: Cargo.toml  README.md
examples/hugr-datasmith/: README.md
examples/hugr-docs/: README.md  hugr.toml
examples/hugr-weather/: Cargo.toml  README.md  hugr.toml
scripts/: release.py  test_release.py
(+41 files in other folders)
