[package]
name = "huggr-wasm"
description = "WASM bindings for the sans-IO Huggr brain and portable trace verification."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
huggr-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
# Pure-data trace format + replay/verify fold; compiles to wasm because its fs
# helpers are never called from here.
huggr-replay.workspace = true
