[package]
name = "hugr-providers"
description = "Model provider adapters for Hugr (OpenAI chat completions, streaming)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hugr-core = { workspace = true }
hugr-host = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["net", "rt", "macros", "io-util"] }
