[package]
name = "hugr-toolkit"
description = "Declarative Hugr subagent definitions: the hugr.toml manifest parser, the predefined tool library, and the `hugr` builder CLI (ARCHITECTURE §20–21)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "hugr_toolkit"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# The manifest is TOML (ARCHITECTURE §20.1). `toml` gives us both a typed
# `Deserialize` path and byte-offset error spans (`toml::de::Error::span`),
# which we surface as precise line/column diagnostics (ROADMAP T1.1).
toml = "0.8"
