[package]
name = "hugr-toolkit"
description = "Hugr subagent crate manifests: the hugr.toml parser, the predefined tool library, and the `hugr` builder CLI."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "hugr_toolkit"

[[bin]]
name = "hugr"
path = "src/bin/hugr.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
# `toml` gives us both a typed `Deserialize` path and byte-offset error spans,
# which we surface as precise line/column diagnostics.
toml = "0.8"
# The predefined tool library implements host `Capability`s, so the toolkit
# stacks on hugr-host + hugr-core as pure data.
hugr-core = { workspace = true }
hugr-host = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
# web_fetch (allowlisted, GET-only) reuses the workspace reqwest client.
reqwest = { workspace = true }
# `hugr run` assembles a hugr-agent runtime from an agent manifest and executes
# one ask over the native engine with the OpenAI-compatible adapter.
hugr-agent = { workspace = true }
hugr-providers = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
# Trace tooling reuses the versioned replay/inspect machinery.
hugr-replay = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
